# scholar_bot

./: .gitignore  README.md  bot.py  pyproject.toml
scholar_bot/: __init__.py  _scholar_bot.py  _scholarly_proxy.py
scholar_bot/cogs/: __init__.py  _formatters.py  earth.py  google_scholar.py  memes.py  sci_hub.py
tests/: test_scholar_bot.py
tests/cogs/: test_google_scholar.py
