[tool.poetry]
name = "scholar_bot"
version = "0.1.0"
description = ""
authors = ["Jeremy Keeler <j@keeler.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scholarly = "^0.4.1"
python-dotenv = "^0.14.0"
"discord.py" = "^1.4.1"
imgurpython = "^1.1.7"
requests = "^2.24.0"
ipython = "^7.17.0"
ipdb = "^0.13.3"
feedparser = "^5.2.1"
markdownify = "^0.5.2"
pytz = "^2020.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^19.10b0"
pytest-asyncio = "^0.14.0"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
